# motion-control-rs

./: .gitignore  README.md
algebra/: Cargo.toml
algebra/matrix_exponential/: Cargo.toml
algebra/src/: main.rs
analysis/bode_diagram/: Cargo.toml
analysis/frequency_response/: Cargo.toml
analysis/nyquist_plot/: Cargo.toml
bilateral_control/: Cargo.toml
bilateral_control/gnuplot/: debug.plt
bilateral_control/src/: main.rs
delayer/: Cargo.toml
delayer/src/: main.rs
differentiator/: Cargo.toml
differentiator/src/: main.rs
disturbance_observer/: Cargo.toml
disturbance_observer/gnuplot/: estimated.plt
disturbance_observer/src/: main.rs
drive_board/parameter_setting/: test_240321_forMN501.ttl
drive_board/velocity_control/: Cargo.toml
drive_board/velocity_control/gnuplot/: f.plt  mp.plt
drive_board/velocity_control/src/: data_storage.rs  fft.rs  main.rs  mclib.rs  plant.rs  serial.rs  statistics.rs
drive_board/velocity_control/src/mclib/: controller.rs  disturbance_observer.rs  integrator.rs  trajectory.rs
drive_board/velocity_control/src/serial/: canadapter.rs  mod.rs
free_filter/: Cargo.toml
free_filter/src/: main.rs
lib/digitalservo/: Cargo.toml
lib/fft/: Cargo.toml
lib/system-identification/: Cargo.toml
pendulum/src/: main.rs
redundant_serial_link/: Cargo.toml
redundant_serial_link/gnuplot/: sx.plt  x.plt
redundant_serial_link/src/: main.rs
rigid_body/: Cargo.toml
rigid_body/gnuplot/: control.plt  (+2 more)
segway/: Cargo.toml
step/: .gitignore  Cargo.toml
system-identification/: .gitignore  Cargo.toml  README.md
(+159 files in other folders)
